e2e: adapt to new requirements and prepare for local-testing
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
+++ b/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
@@ -11,5 +11,6 @@ servers:
 %{ endfor ~}
 ssh:
     user: "core"
+    port: ${ssh_port}
     privateKey: |
         ${indent(8, trimspace(ssh_private_key))}
