--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -14,5 +14,6 @@ clusterDNSIPs:
 - 11.0.0.10
 ssh:
     user: "core"
+    port: ${ssh_port}
     privateKey: |
         ${indent(8, trimspace(ssh_private_key))}
