--- a/e2e/templates/etcd_config.yaml.tmpl
+++ b/e2e/templates/etcd_config.yaml.tmpl
@@ -1,5 +1,6 @@
 ssh:
     user: "core"
+    port: ${ssh_port}
     privateKey: |
         ${indent(8, trimspace(ssh_private_key))}
 peerCACertificate: |
