pkg/etcd: add server certificates support
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/etcd_config.yaml.tmpl
+++ b/e2e/templates/etcd_config.yaml.tmpl
@@ -3,7 +3,7 @@ ssh:
     port: ${ssh_port}
     privateKey: |
         ${indent(8, trimspace(ssh_private_key))}
-peerCACertificate: |
+caCertificate: |
     ${indent(4, trimspace(peer_ca))}
 members:
 %{ for index, ip in peer_ips ~}
@@ -12,8 +12,13 @@ members:
             ${indent(12, trimspace(peer_certs[index]))}
         peerKey: |
             ${indent(12, trimspace(peer_keys[index]))}
+        serverCertificate: |
+            ${indent(12, trimspace(server_certs[index]))}
+        serverKey: |
+            ${indent(12, trimspace(server_keys[index]))}
         host:
             ssh:
                 address: "${peer_ssh_addresses[index]}"
         peerAddress: ${peer_ips[index]}
+        serverAddress: ${server_ips[index]}
 %{ endfor ~}
