Add support for spawning multiple controllers and workers
This commit adds support for specifying number of controller and worker
nodes when using the Makefile. This information is then propagated and
used in both Vagrantfile to create specific amount of VMs and in e2e and
local tests, when deploying Kubernetes components.

To make sure pod-to-pod communication works between nodes, Vagrant
provisioning additionally deploys static routes to all managed VMs.

This commit also fixes the values passed to kube-apiserver chart in
situation, when there is more than one controller.

By default though, when running e2e tests, still just one controller
machine is being created.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -3,7 +3,7 @@ kubelets:
 - address: ${kubelet_addresses[index]}
   podCIDR: ${kubelet_pod_cidrs[index]}
   bootstrapKubeconfig: |
-      ${indent(6, trimspace(bootstrap_kubeconfigs[index]))}
+      ${indent(6, trimspace(bootstrap_kubeconfig))}
   host:
       ssh:
           address: ${ssh_address}
