pkg/kubelet: add required name parameter
By default kubelet takes node name from os.Hostname(), however we cannot
use that to determine the node name, so the easiest way is to simply
require that from the user.

This name will be later on used in hooks for labeling the node, tainting
it etc.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -2,6 +2,7 @@ kubelets:
 %{ for index, ssh_address in ssh_addresses ~}
 - address: ${kubelet_addresses[index]}
   podCIDR: ${kubelet_pod_cidrs[index]}
+  name: ${kubelet_names[index]}
   bootstrapKubeconfig: |
       ${indent(6, trimspace(bootstrap_kubeconfig))}
   host:
