pkg/controlplane/kube-controller-manager: configure FlexVolumePluginDir
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/controlplane_config.yaml.tmpl
+++ b/e2e/templates/controlplane_config.yaml.tmpl
@@ -37,6 +37,7 @@ kubeAPIServer:
     %{~ endif ~}
 
 kubeControllerManager:
+    flexVolumePluginDir: /var/lib/kubelet/volumeplugins
     kubernetesCAKey: |
         ${indent(8, trimspace(kubernetes_ca_key))}
     serviceAccountPrivateKey: |
