e2e/templates/values.yaml.tmpl: pass flexVolumePluginDir value
As latest version of the chart requires it.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/values.yaml.tmpl
+++ b/e2e/templates/values.yaml.tmpl
@@ -9,6 +9,7 @@ rootCACertificate: |
 
 replicas: ${replicas}
 maxUnavailable: ${max_unavailable}
+flexVolumePluginDir: /var/lib/kubelet/volumeplugins
 apiServers:
 %{ for api_server in api_servers ~}
 - ${api_server}
