libvirt: set nodes hostnames
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/libvirt/templates/ct_config.yaml.tmpl
+++ b/libvirt/templates/ct_config.yaml.tmpl
@@ -1,3 +1,11 @@
+storage:
+  files:
+    - path: /etc/hostname
+      filesystem: root
+      mode: 0420
+      contents:
+        inline: |
+          ${hostname}
 systemd:
   units:
     - name: locksmithd.service
