e2e: pass etcd servers as a list
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/kube-apiserver-values.yaml.tmpl
+++ b/e2e/templates/kube-apiserver-values.yaml.tmpl
@@ -23,7 +23,10 @@ etcdClientCertificate: |
 etcdClientKey: |
   ${indent(2, trimspace(etcd_client_key))}
 
-etcdServers: ${join(",", etcd_servers)}
+etcdServers:
+%{ for server in  etcd_servers }
+- ${server}
+%{ endfor ~}
 serviceCIDR: "11.0.0.0/24"
 replicas: ${replicas}
 %{ if replicas > 1 ~}
