local-testing/e2e: improve load balancers configuration
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
+++ b/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
@@ -1,4 +1,6 @@
-bindAddress: 0.0.0.0:6443
+name: ${name}
+hostConfigPath: ${config_path}
+bindAddress: ${bind_address}
 apiLoadBalancers:
 %{ for index, ssh_address in ssh_addresses ~}
 - host:
