--- a/e2e/templates/kube-apiserver-values.yaml.tmpl
+++ b/e2e/templates/kube-apiserver-values.yaml.tmpl
@@ -24,15 +24,8 @@ etcdClientKey: |
   ${indent(2, trimspace(etcd_client_key))}
 
 etcdServers:
-%{ for server in  etcd_servers }
+%{ for server in etcd_servers ~}
 - ${server}
 %{ endfor ~}
 serviceCIDR: "11.0.0.0/24"
 replicas: ${replicas}
-%{ if replicas > 1 ~}
-# Bootstrap control plane is running on port 8443 instead of standard 6443, as haproxy is listening on 6443 for
-# load balancing and failover. Bootstrap kube-apiserver registers kubernetes.default.svc with port 8443, so we need to
-# use the same port here as bootstrap kube-apiserver.
-bindOnHostIP: true
-securePort: 8443
-%{ endif ~}
