pkg/apiloadbalancer: improvements
This commits removes unused metrics settings, as they are currently not
utilized and replaces bindPort option with more flexible bindAddress.

Additionally, it adds configurable container name and configuration
path, which allows to run multiple instances of apiloadbalancer on a
single machine, which will be used in the future.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
+++ b/e2e/templates/apiloadbalancer_pool_config.yaml.tmpl
@@ -1,7 +1,7 @@
+bindAddress: 0.0.0.0:6443
 apiLoadBalancers:
 %{ for index, ssh_address in ssh_addresses ~}
-- metricsBindAddress: ${metrics_bind_addresses[index]}
-  host:
+- host:
       ssh:
           address: ${ssh_address}
 %{ endfor ~}
