libvirt/Vagrantfile: disable update-engine
So the updates are not being downloaded during the development.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/libvirt/templates/ct_config.yaml.tmpl
+++ b/libvirt/templates/ct_config.yaml.tmpl
@@ -10,6 +10,8 @@ systemd:
   units:
     - name: locksmithd.service
       mask: true
+    - name: update-engine.service
+      mask: true
     - name: docker.service
       enabled: true
     - name: systemd-timesyncd.service
