--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -1,5 +1,12 @@
 cgroupDriver: ${cgroup_driver}
 networkPlugin: ${network_plugin}
+systemReserved:
+  cpu: 100m
+  memory: 500Mi
+kubeReserved:
+%{ for k, v in kube_reserved ~}
+  ${k}: '${v}'
+%{ endfor ~}
 kubelets:
 %{ for index, ssh_address in ssh_addresses ~}
 - address: ${kubelet_addresses[index]}
