--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -1,5 +1,10 @@
 cgroupDriver: ${cgroup_driver}
 networkPlugin: ${network_plugin}
+%{ if network_plugin == "kubenet" }
+hairpinMode: promiscuous-bridge
+%{~ else ~}
+hairpinMode: hairpin-veth
+%{~ endif }
 systemReserved:
   cpu: 100m
   memory: 500Mi
