pkg/kubelet: add support for setting volumePluginDir
Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/kubelet_config.yaml.tmpl
+++ b/e2e/templates/kubelet_config.yaml.tmpl
@@ -5,6 +5,7 @@ hairpinMode: promiscuous-bridge
 %{~ else ~}
 hairpinMode: hairpin-veth
 %{~ endif }
+volumePluginDir: /var/lib/kubelet/volumeplugins
 systemReserved:
   cpu: 100m
   memory: 500Mi
