--- a/libvirt/templates/ct_config.yaml.tmpl
+++ b/libvirt/templates/ct_config.yaml.tmpl
@@ -6,6 +6,40 @@ storage:
     contents:
       inline: |
         ${hostname}
+  - path: /etc/containerd/config.toml
+    filesystem: root
+    mode: 0600
+    contents:
+      inline: |
+        # persistent data location
+        root = "/var/lib/containerd"
+        # runtime state information
+        state = "/run/docker/libcontainerd/containerd"
+        # set containerd as a subreaper on linux when it is not running as PID 1
+        subreaper = true
+        # set containerd's OOM score
+        oom_score = -999
+        # CRI plugin listens on a TCP port by default
+        disabled_plugins = []
+
+        # grpc configuration
+        [grpc]
+        address = "/run/docker/libcontainerd/docker-containerd.sock"
+        # socket uid
+        uid = 0
+        # socket gid
+        gid = 0
+
+        [plugins.linux]
+        # shim binary name/path
+        shim = "containerd-shim"
+        # runtime binary name/path
+        runtime = "runc"
+        # do not use a shim when starting containers, saves on memory but
+        # live restore is not supported
+        no_shim = false
+        # display shim logs in the containerd daemon's log output
+        shim_debug = true
 systemd:
   units:
   - name: locksmithd.service
@@ -16,6 +50,15 @@ systemd:
     enabled: true
   - name: systemd-timesyncd.service
     enabled: true
+  - name: containerd.service
+    enabled: true
+    dropins:
+    - name: 10-use-custom-config.conf
+      contents: |
+        [Service]
+        Environment=CONTAINERD_CONFIG=/etc/containerd/config.toml
+        ExecStart=
+        ExecStart=/usr/bin/env PATH=$${TORCX_BINDIR}:$${PATH} $${TORCX_BINDIR}/containerd --config $${CONTAINERD_CONFIG}
 passwd:
   users:
   - name: core
