Update to Kubernetes v1.20
As part of the update, we use latest chart versions, values format
for kube-apiserver Helm chart changed a bit.

Signed-off-by: Mateusz Gozdek <mgozdekof@gmail.com>

--- a/e2e/templates/kube-apiserver-values.yaml.tmpl
+++ b/e2e/templates/kube-apiserver-values.yaml.tmpl
@@ -2,8 +2,8 @@ serverKey: |
 {{ .State.PKI.Kubernetes.KubeAPIServer.ServerCertificate.PrivateKey | toString | trim | indent 2 }}
 serverCertificate: |
 {{ .State.PKI.Kubernetes.KubeAPIServer.ServerCertificate.X509Certificate | toString | trim | indent 2 }}
-serviceAccountPublicKey: |
-{{ .State.PKI.Kubernetes.ServiceAccountCertificate.PublicKey | toString | trim | indent 2 }}
+serviceAccountPrivateKey: |
+{{ .State.PKI.Kubernetes.ServiceAccountCertificate.PrivateKey | toString | trim | indent 2 }}
 caCertificate: |
 {{ .State.PKI.Kubernetes.CA.X509Certificate | toString | trim | indent 2 }}
 frontProxyClientKey: |
